Ver 2.0.2 - added auto-focus to search input (#126) - improved creation of one-day-events (#127) - fixed the event descriptions in calendar (finally...) (#119) - fixed event description pages not formatting paragraphs correctly (#121) - fixed front page event tiles link not showing hover (#122)

--- a/inc/calendar/calendar.css
+++ b/inc/calendar/calendar.css
@@ -239,6 +239,10 @@
   width: 100%;
 }
 
+.calendar-element-event .additional-info br {
+  display: none;
+}
+
 .calendar-element-event .additional-info .events-page-link,
 .calendar-element-event.default .additional-info .events-page-link {
   background-image: linear-gradient(var(--element-text-color) 0%, var(--element-text-color) 100%);
